--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,124 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar{
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+@mixin gradient-horizontal($start-color: #555, $end-color: #333, $start-percent: 0%, $end-percent: 100%) {
+  background-image: -webkit-linear-gradient(left, $start-color $start-percent, $end-color $end-percent);
+  background-image: -o-linear-gradient(left, $start-color $start-percent, $end-color $end-percent);
+  background-image: linear-gradient(to right, $start-color $start-percent, $end-color $end-percent);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{ie-hex-str($start-color)}', endColorstr='#{ie-hex-str($end-color)}', GradientType=1);
+}
+
+.center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.wrapper {
+    @extend .center;
+}
+
+.outer {
+  height: 200px;
+  width: 200px;
+  border-radius: 45%;
+  @include gradient-horizontal(#795DEF, #EB3CF9, 25%, 100%);
+      @extend .center;
+}
+
+.inner {
+  height: 175px;
+  width: 175px;
+  border-radius: 45%;
+  @include gradient-horizontal(#795DEF, #EB3CF9, 25%, 100%);
+      @extend .center;
+}
+
+.content {
+  @extend .center;
+  height: 150px;
+  width: 150px;
+  background-color: #260E36;
+  border-radius: 45%;
+}
+
+.container{
+  position: relative;
+}
+
+h4 {
+  @extend .center;
+  text-align: center;
+  vertical-align: middle;
+  color: white;
+  font-size: 24px;
+  padding-bottom: 65px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
+
+.dropdown-toggle { outline: 0; }
+
+.nav-flush .nav-link {
+  border-radius: 0;
+}
+
+.btn-toggle {
+  display: inline-flex;
+  align-items: center;
+  padding: .25rem .5rem;
+  font-weight: 600;
+  color: rgba(0, 0, 0, .65);
+  background-color: transparent;
+  border: 0;
+}
+.btn-toggle:hover,
+.btn-toggle:focus {
+  color: rgba(0, 0, 0, .85);
+  background-color: #d2f4ea;
+}
+
+.btn-toggle::before {
+  width: 1.25em;
+  line-height: 0;
+  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+  transition: transform .35s ease;
+  transform-origin: .5em 50%;
+}
+
+.btn-toggle[aria-expanded="true"] {
+  color: rgba(0, 0, 0, .85);
+}
+.btn-toggle[aria-expanded="true"]::before {
+  transform: rotate(90deg);
+}
+
+.btn-toggle-nav a {
+  display: inline-flex;
+  padding: .1875rem .5rem;
+  margin-top: .125rem;
+  margin-left: 1.25rem;
+  text-decoration: none;
+}
+.btn-toggle-nav a:hover,
+.btn-toggle-nav a:focus {
+  background-color: #d2f4ea;
+}
+
+.scrollarea {
+  overflow-y: auto;
+}
+
+.fw-semibold { font-weight: 600; }
+.lh-tight { line-height: 1.25; }
